--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-luckysheet",
-  "version": "1.1.11",
+  "version": "1.2.0",
   "main": "lib",
   "types": "lib/index.d.ts",
   "engines": {
@@ -35,6 +35,8 @@
     "magic-string": "^0.25.7",
     "postcss": "^8.3.8",
     "rimraf": "^3.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.58.0",
     "rollup-merge-config": "^0.0.3",
     "rollup-plugin-babel": "^4.4.0",
@@ -50,8 +52,6 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "luckysheet": "^2.1.13",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "luckysheet": "^2.1.13"
   }
 }
