--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-luckysheet",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "main": "lib",
   "types": "lib/index.d.ts",
   "engines": {
@@ -34,12 +34,13 @@
     "less-plugin-npm-import": "^2.1.0",
     "magic-string": "^0.25.7",
     "postcss": "^8.3.8",
-    "rimraf": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rimraf": "^3.0.2",
     "rollup": "^2.58.0",
     "rollup-merge-config": "^0.0.3",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-external-globals": "^0.6.1",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-node-resolve": "^5.2.0",
